--- a/client/src/components/TeacherPanel.css
+++ b/client/src/components/TeacherPanel.css
@@ -42,10 +42,13 @@
 .question-box-wrapper {
   position: relative;
 }
+.question-box-wrapper select {
+  margin-right: 40%;
+}
 
 textarea {
-  width: 100%;
-  height: 100px;
+  width: 60%;
+  height: 130px;
   padding: 16px;
   font-size: 16px;
   border: none;
@@ -71,12 +74,14 @@ textarea {
   font-size: 12px;
   color: #666;
   margin-top: 5px;
+  margin-right: 40%;
 }
 
 .options-section .options-header {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
+  margin-right: 40%;
   margin-bottom: 10px;
   font-weight: 600;
 }
@@ -85,6 +90,7 @@ textarea {
   display: flex;
   align-items: center;
   margin-bottom: 15px;
+  width: 60%;
 }
 
 .option-number {
@@ -233,7 +239,7 @@ textarea {
   min-width: 260px;
 }
 
-.circle-num {
+/* .bar-num {
   background: #5b5fc7;
   color: #fff;
   width: 34px;
@@ -243,7 +249,7 @@ textarea {
   justify-content: center;
   border-radius: 50%;
   font-weight: 700;
-}
+} */
 
 .option-text {
   font-size: 15px;
